.circleci/files/backend-eks.yaml
Description: >
  Elastic Kubernetes Service for backend, Udacity Cloud DevOps Engineer - Capstone Project

Parameters:
  WorkflowID:
    Description: Unique identifier.
    Type: String
  MyVpcId:
    Description: Id of the VPC to use for the security group.
    Type: String
  SubnetID1:
    Description: Subnet identifier 1 for EKS nodes.
    Type: String
  SubnetID2:
    Description: Subnet identifier 2 for EKS nodes.
    Type: String
  SubnetID3:
    Description: Subnet identifier 3 for EKS nodes.
    Type: String

Resources:
  EKSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to the K8s Cluster
      GroupName: !Sub "eks-${WorkflowID}"
      VpcId: !Sub "${MyVpcId}"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8000
        ToPort: 8000
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: Udacity Capstone Project

  EKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: !Sub "cluster-${WorkflowID}"
      RoleArn: arn:aws:iam::880754027086:role/eksClusterRole
      ResourcesVpcConfig:
        EndpointPublicAccess: true
        EndpointPrivateAccess: true
        SubnetIds:
        - !Sub "${SubnetID1}"
        - !Sub "${SubnetID2}"
        - !Sub "${SubnetID3}"
        SecurityGroupIds:
        - !Ref EKSSecurityGroup
      Tags:
      - Key: Name
        Value: Udacity Capstone Project

  EKSNodeGroup:
    Type: AWS::EKS::Nodegroup
    Properties:
      NodegroupName: Capstone-Cluster-Nodegroup
      ClusterName: !Ref EKSCluster
      NodeRole: arn:aws:iam::880754027086:role/eksNodeRole
      AmiType: AL2_x86_64
      InstanceTypes:
      - t2.micro
      ScalingConfig:
        DesiredSize: 2
        MinSize: 1
        MaxSize: 3
      Subnets:
      - !Sub "${SubnetID1}"
      - !Sub "${SubnetID2}"
      - !Sub "${SubnetID3}"
      Tags:
        Name: Udacity Capstone Project

Outputs:
  K8sAPIEndpoint:
    Value: !GetAtt EKSCluster.Endpoint
    Description: Endpoint of the K8s API server
